# q2pro

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILDING.md  INSTALL.md  LICENSE  Makefile  NOTE  README.md  build.bat  config_win64  copy-game-dll.py  embed.py  meson.build  meson_options.txt  version.py
.ci/: config_appleintel  config_applesilicon  config_linux  config_linux64  config_linuxARM64  config_windows32  config_windows64  configure-ffmpeg.sh  i686-w64-mingw32.txt  nightly.sh  readme-template-rr.txt  readme-template.txt  x86_64-linux64.txt  x86_64-linuxarm64.txt  x86_64-w64-mingw32.txt
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_feature_request.md  3_question.md
.github/workflows/: build.yml  main.yml  nightly.yml  release.yml
apple/: Makefile
apple/Q2Pro.app/Contents/: Info.plist
config/: darwin-arm64-native-file  darwin-x86_64-native-file  linux-arm64-cross-file  linux-armv7-cross-file
doc/: client.asciidoc  client.md  client.txt  server.asciidoc  server.md  server.txt
doc/examples/: buildconfig
inc/client/: client.h  input.h  keys.h  smilo.h  ui.h  video.h
inc/client/sound/: dma.h  sound.h
inc/common/: bsp.h  cmd.h  cmodel.h  common.h  crc.h  cvar.h  error.h  field.h  files.h  game3_shared.h  gamedll.h  hash_map.h  http.h  intreadwrite.h  loc.h  math.h  msg.h  natsort.h  pmove.h  prompt.h  protocol.h  sizebuf.h  utils.h  zone.h
inc/common/net/: chan.h  net.h
inc/format/: bsp.h  md2.h  md3.h  pak.h  sp2.h
inc/refresh/: futural.h  images.h  models.h  refresh.h
inc/server/: nav.h  server.h  smilo.h
inc/server/mvd/: client.h  protocol.h
inc/shared/: base85.h  debug.h  files.h  game.h  game3.h  game3_shared.h  game_ext.h  gameext.h  ghud.h  list.h  m_flash.h  native.h  platform.h  shared.h  wasm_game.h
inc/system/: hunk.h  pthread.h  system.h
man/: q2pro.6.txt  q2proded.6.txt
q2pro-mgw-sdk/: Makefile  checksum  config  config64
scripts/: linux-package.sh  mac-package.sh  win-package.sh
scripts/apple/: Info.plist  q2pro.icns
src/action/: Makefile  Makefile.lcc  a_cmds.c  a_ctf.c  a_dom.c  a_game.c  a_game.h  a_match.c  a_menu.c  a_radio.c  a_radio.h  a_team.c  a_team.h  a_tourney.c  a_vote.c  a_xcmds.c  a_xgame.c  a_xmenu.c  a_xvote.c  cgf_sfx_glass.c  cgf_sfx_glass.h  e_game.c  g_cmds.c  g_combat.c  g_ext.c  g_grapple.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  game.h  game.sln  (+14 more)
src/action/acesrc/: acebot.h  acebot.txt  acebot_ai.c  acebot_cmds.c  acebot_compress.c  acebot_items.c  acebot_movement.c  acebot_nodes.c  acebot_spawn.c  bot_ai.c  bot_collision.c  bot_combat.c  bot_env_doors.c  bot_movement.c  bot_states.c  bot_utility.c  bot_weapon.c  botchat.c  botchat.h  botnav.c  botnav.h  botscan.c  botscan.h
src/baseq2/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_native.c  g_phys.c  g_ptrs.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_wasm.c  g_wasm.h  g_weapon.c  m_actor.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  (+11 more)
src/client/: ascii.c  cgame.c  cgame_classic.c  cgame_classic.h  cin.c  client.h  console.c  crc.c  demo.c  download.c  effects.c  entities.c  ffcin.c  ghud.c  gtv.c  http.c  input.c  keys.c  locs.c  main.c  newfx.c  null.c  parse.c  precache.c  predict.c  refresh.c  screen.c  smilo.c  tent.c  view.c  wheel.c
src/client/sound/: al.c  dma.c  main.c  mem.c  mix.c  ogg.c  qal.c  qal.h  sound.h
src/client/ui/: demos.c  menu.c  playerconfig.c  playermodels.c  q2pro.menu  script.c  servers.c  ui.c  ui.h
src/common/: bsp.c  bsp_template.c  cmd.c  cmodel.c  common.c  crc.c  cvar.c  error.c  features.h  field.c  fifo.c  files.c  gamedll.c  hash_map.c  http.c  loc.c  math.c  mdfour.c  msg.c  natsort.c  pmove.c  prompt.c  sizebuf.c  tests.c  unicode_translit.h  utils.c  zone.c
src/game/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_ptrs.c  g_ptrs.h  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  m_actor.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  m_move.c  m_mutant.c  (+9 more)
src/jump/: strafe_helper_includes.h
src/refresh/: arbfp.h  debug.c  draw.c  gl.h  hq2x.c  images.c  images.h  jsmn.h  legacy.c  main.c  mesh.c  models.c  qgl.c  qgl.h  shader.c  sky.c  state.c  surf.c  tess.c  texture.c  world.c
src/server/: ac.c  commands.c  entities.c  game.c  ghud.c  init.c  main.c  mvd.c  nav.c  save.c  send.c  server.h  smilo.c  user.c  wasm_game.c  world.c
src/shared/: base85.c  m_flash.c  shared.c
src/unix/: evdev.c  hunk.c  lirc.c  meson.build  oss.c  sound.c  system.c  tty.c  video.c  x11.c
src/unix/res/: com.github.skullernet.q2pro.metainfo.xml  q2pro.desktop
src/unix/sdl/: clipboard.c  sound.c  swimp.c  video.c
src/unix/sdl2/: sound.c
src/unix/sound/: sdl.c
src/unix/video/: emscripten.c  keytable_linux.h  meson.build  sdl.c  wayland.c  x11.c
src/unix/video/keytables/: at.c  html5.h  keytables.h
src/win-wrapper/: wrapper.c
src/windows/: ac.c  client.c  client.h  debug.c  dinput.c  dsound.c  egl.c  egl_import.h  glimp.c  glimp.h  hunk.c  meson.build  swimp.c  system.c  wave.c  wgl.c  wgl.h
src/windows/res/: aqtion.rc  baseq2.rc  game.rc  q2pro-aqtion.rc  q2pro.exe.manifest  q2pro.rc  q2proded-aqtion.rc  q2proded.exe.manifest  q2proded.rc  win-wrapper.rc
subprojects/: discord-sdk.wrap  discord_sdk.wrap  ffmpeg.wrap  fmt.wrap  jsoncpp.wrap  khr-headers.wrap  libcurl.wrap  libjpeg-turbo.wrap  libpng.wrap  libuuid.wrap  ogg.wrap  openal-soft.wrap  zlib-ng.wrap  zlib.wrap
subprojects/packagefiles/: khr-headers.tar.xz
subprojects/packagefiles/curl/: meson.build  meson_options.txt
(+63 files in other folders)
